# hopband

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  gatts.c  gatts.h  i2c.c  i2c.h  led.c  led.h  main.c  mqtt.c  mqtt.h  nvstorage.c  nvstorage.h  thermistor.c  thermistor.h  wifi.c  wifi.h
main/ble/: ble_common.c  ble_common.h  ble_gap.c  ble_gap.h  ble_gatts.c  ble_gatts.h  ble_interface.c
main/ble/services/: battery_service.c  battery_service.h  gps_service.c  gps_service.h  heartrate_service.c  heartrate_service.h  thermistor_service.c  thermistor_service.h  wifi_service.c  wifi_service.h
main/bt/: ble_gap.c  ble_gatt_server.c  ble_interface.c  ble_interface.h
main/sensors/: accmeter.c  accmeter.h  gps.c  gps.h  heartrate.c  heartrate.h  thermistor.c
